--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.3",
   "description": "A lightweight CLI for interacting with MCP (Model Context Protocol) servers",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "bin": {
-    "mcp-cli": "src/index.ts"
+    "mcp-cli": "dist/index.js"
   },
   "scripts": {
     "dev": "bun run src/index.ts",
@@ -21,7 +21,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "bunx --bun @biomejs/biome check src/",
     "lint:fix": "bunx --bun @biomejs/biome check --write src/",
-    "format": "bunx --bun @biomejs/biome format --write src/"
+    "format": "bunx --bun @biomejs/biome format --write src/",
+    "build:npm": "tsup",
+    "prepublishOnly": "npm run build:npm"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2"
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "^1.3.5",
+    "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   },
   "keywords": [
@@ -50,6 +53,7 @@
   },
   "homepage": "https://github.com/philschmid/mcp-cli#readme",
   "engines": {
+    "node": ">=18.0.0",
     "bun": ">=1.0.0"
   }
 }
