--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -18,4 +18,4 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         with:
-          args: "deploy --remote-only --dockerfile ./Dockerfile --config ./fly.toml"
+          args: "deploy --remote-only"
