--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcpx",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "A lightweight CLI for interacting with MCP (Model Context Protocol) servers",
   "type": "module",
   "main": "src/index.ts",
@@ -24,7 +24,8 @@
     "format": "bunx --bun @biomejs/biome format --write src/"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.25.2"
+    "@modelcontextprotocol/sdk": "^1.25.2",
+    "fastest-levenshtein": "^1.0.16"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
