--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Build Linux x64
         run: bun build --compile --minify --target=bun-linux-x64 src/index.ts --outfile dist/mcpx-linux-x64
 
+      - name: Build Linux ARM64
+        run: bun build --compile --minify --target=bun-linux-arm64 src/index.ts --outfile dist/mcpx-linux-arm64
+
       - name: Build macOS x64
         run: bun build --compile --minify --target=bun-darwin-x64 src/index.ts --outfile dist/mcpx-darwin-x64
 
@@ -95,6 +98,38 @@ jobs:
           generate_release_notes: true
           files: |
             dist/mcpx-linux-x64
+            dist/mcpx-linux-arm64
             dist/mcpx-darwin-x64
             dist/mcpx-darwin-arm64
             dist/checksums.txt
+
+  homebrew:
+    name: Update Homebrew Tap
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout homebrew tap
+        uses: actions/checkout@v4
+        with:
+          repository: cs50victor/homebrew-mcpx
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2"
+
+      - name: Get version from tag
+        id: version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Update formula
+        run: ruby scripts/release.rb "${{ steps.version.outputs.VERSION }}"
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "Release v${{ steps.version.outputs.VERSION }}"
+          git push
